(library
 (name uTop)
 (public_name utop)
 (wrapped false)
 (modes byte)
 (libraries compiler-libs.toplevel findlib.top utop_lambda_term logs.lwt threads
   utop_lwt_react utop_react xdg utop_zed)
 (preprocess
  (action
   (run %{bin:cppo} -V OCAML:%{ocaml_version} %{input-file}))))

(ocamllex uTop_lexer)
